--- a/vc-web/vc-web-front/src/main/resources/public/monitor/state/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/state/index_list2.html
@@ -72,7 +72,7 @@
 				        <li><label><input value="cssMoData" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >报文数据</label></li>
 				        <li><label><input value="cssTeNo" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >终端信息</label></li>
 				        <li><label><input value="cssAutopilot" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >自动驾驶状态</label></li>
-				        <li><label><input value="cssHandbrake" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >手刹状态</label></li>
+				        <li><label><input value="cssHandbrakeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >手刹状态</label></li>
 					</ul>
 				</div>
 			</div>
@@ -252,7 +252,7 @@
 	  		,{field: "cssMoData", title: "报文数据", width: 110, sort:true}
 	  		,{field: "cssTeNo", title: "终端信息", width: 110, sort:true}
 	  		,{field: "cssAutopilot", title: "自动驾驶状态", width: 110, sort:true}
-	  		,{field: "cssHandbrake", title: "手刹状态：0=所有刹车释放；1=所有刹车应用；2=所有刹车不工作（应用或释放中）；3=未知；", width: 110, sort:true}
+	  		,{field: "cssHandbrakeText", title: "手刹状态", width: 110, sort:true}
       		,{field: 'operate', title: '操作', width: 40, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
