--- a/vc-web/vc-web-front/src/main/resources/public/monitor/stateLimited/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/stateLimited/index_query.html
@@ -79,25 +79,25 @@
 <dl cond="cssObdMile" style="display:none;">
 				<dt>累计里程</dt>
 				<dd  >
-					<input  name="cssObdMileEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssObdMileEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssEngineT" style="display:none;">
 				<dt>发动机温度</dt>
 				<dd  >
-					<input  name="cssEngineTEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssEngineTEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssMileage" style="display:none;">
 				<dt>订单总里程</dt>
 				<dd  >
-					<input  name="cssMileageEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssMileageEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssSpeed" style="display:none;">
 				<dt>车速</dt>
 				<dd  >
-					<input  name="cssSpeedEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssSpeedEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssMotor" style="display:none;">
@@ -109,7 +109,7 @@
 <dl cond="cssOil" style="display:none;">
 				<dt>燃油量</dt>
 				<dd  >
-					<input  name="cssOilEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssOilEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssPower" style="display:none;">
@@ -139,25 +139,25 @@
 <dl cond="cssFuelMileage" style="display:none;">
 				<dt>订单油里程</dt>
 				<dd  >
-					<input  name="cssFuelMileageEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssFuelMileageEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssElectricMileage" style="display:none;">
 				<dt>订单电里程</dt>
 				<dd  >
-					<input  name="cssElectricMileageEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssElectricMileageEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssEndurance" style="display:none;">
 				<dt>续航里程</dt>
 				<dd  >
-					<input  name="cssEnduranceEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssEnduranceEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssTemperature" style="display:none;">
 				<dt>温度</dt>
 				<dd  >
-					<input  name="cssTemperatureEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssTemperatureEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssCsq" style="display:none;">
@@ -169,13 +169,13 @@
 <dl cond="cssLongitude" style="display:none;">
 				<dt>经度</dt>
 				<dd  >
-					<input  name="cssLongitudeEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssLongitudeEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssLatitude" style="display:none;">
 				<dt>纬度</dt>
 				<dd  >
-					<input  name="cssLatitudeEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssLatitudeEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssGpsValid" style="display:none;">
@@ -203,7 +203,7 @@
 <dl cond="cssDir" style="display:none;">
 				<dt>方向角</dt>
 				<dd  >
-					<input  name="cssDirEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="cssDirEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="cssCircular" style="display:none;">
@@ -367,9 +367,15 @@
 				</dd>
 			</dl>
 <dl cond="cssHandbrake" style="display:none;">
-				<dt>手刹状态：0=所有刹车释放；1=所有刹车应用；2=所有刹车不工作（应用或释放中）；3=未知；</dt>
+				<dt>手刹状态</dt>
 				<dd  >
-					<input  name="cssHandbrakeEquals" placeholder="请输入数字" class="form-control" >
+					<select class="form-control"  name="cssHandbrakeEquals"  >
+	                    <option></option>
+                         <option value="0">所有刹车释放</option>
+                         <option value="1">所有刹车应用</option>
+                         <option value="2">所有刹车不工作（应用或释放中）</option>
+                         <option value="3">未知</option>
+                    </select>
 				</dd>
 			</dl>
 			<div class="querybtns">
@@ -430,7 +436,7 @@
 			        <li><label><input cond="cssMoData" value="cssMoData"  type="checkbox" onclick='showHideCondition(this, this.value);' >报文数据</label></li>
 			        <li><label><input cond="cssTeNo" value="cssTeNo"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端信息</label></li>
 			        <li><label><input cond="cssAutopilot" value="cssAutopilot"  type="checkbox" onclick='showHideCondition(this, this.value);' >自动驾驶状态</label></li>
-			        <li><label><input cond="cssHandbrake" value="cssHandbrake"  type="checkbox" onclick='showHideCondition(this, this.value);' >手刹状态：0=所有刹车释放；1=所有刹车应用；2=所有刹车不工作（应用或释放中）；3=未知；</label></li>
+			        <li><label><input cond="cssHandbrake" value="cssHandbrakeText"  type="checkbox" onclick='showHideCondition(this, this.value);' >手刹状态</label></li>
 					</ul>
 				</div>
 			</div>
