--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_query.html
@@ -6,10 +6,10 @@
 <body>
 	<form class="form-horizontal queryform">
 		<div class="form-group">
-<dl cond="csNumber" >
-				<dt>车机号</dt>
+<dl cond="csVin" >
+				<dt>车架号</dt>
 				<dd  >
-					<input  name="csNumberEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/admin/machine/search">
+					<input  name="csVinEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/admin/vehicle/search">
 				</dd>
 			</dl>
 <dl cond="currentTime" >
