--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyStateLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyStateLimited/index_list2.html
@@ -84,7 +84,7 @@
     var currPage=1,currSize=15;
 
     function checkParams() {
-        if ($("input[name='csNumberEquals']").val() === '' || typeof($("input[name='csNumberEquals']").val()) === 'undefined') {
+        if ($("input[name='csVinEquals']").val() === '' || typeof($("input[name='csVinEquals']").val()) === 'undefined') {
             layer.msg('请选择一个车机号', {icon: 7, time: 1600});
             return false;
         }
