--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyStateLimited/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyStateLimited/index_query.html
@@ -9,7 +9,7 @@
 <dl cond="csVin" >
 				<dt>车辆</dt>
 				<dd  >
-					<input  name="csVinEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/admin/vehicle/find">
+					<input  name="csVinEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/admin/vehicle/search">
 				</dd>
 			</dl>
 <dl cond="currentTime" >
