页面接入商解析

--- a/vc-web/vc-web-front/src/main/resources/public/electricity/historyState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/electricity/historyState/index_list2.html
@@ -166,7 +166,7 @@
 	var tableId = "THistoryGb";
 	var clms = [{checkbox: true}
 	  		,{field: "csVin", title: "车辆vin码", width: 180, sort:true}
-	  		,{field: "csAccess", title: "授权系统", width: 160, sort:true}
+	  		,{field: "csAccessText", title: "授权系统", width: 160, sort:true}
 	  		,{field: "addTime", title: "添加时间", width: 160, sort:true}
 	  		,{field: "currentTime", title: "报文上传时间", width: 160, sort:true}
 	  		,{field: "csProtocolText", title: "协议类型", width: 110, sort:true}
