--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
@@ -288,7 +288,7 @@
     var tableId = "THistoryState";
     var clms = [{checkbox: true}
 
-        , {field: "csAccess", title: "接入商", width: 140}
+        , {field: "csAccessText", title: "接入商", width: 140}
         , {field: "csNumber", title: "车机号", width: 140}
         , {field: "addTimeText", title: "接收时间", width: 160}
         , {field: "currentTimeText", title: "报文时间", width: 160}
