--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
@@ -33,17 +33,17 @@
                                       onclick='showHideColumn(this, this.value);'>添加时间</label></li>
                     <li><label><input value="currentTimeText" checked="checked" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>报文时间</label></li>
-                    <li><label><input value="rentFlg" checked="checked" type="checkbox"
+                    <li><label><input value="rentFlg" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>租赁状态</label></li>
-                    <li><label><input value="warnCode" checked="checked" type="checkbox"
+                    <li><label><input value="warnCode" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>报警代码</label></li>
-                    <li><label><input value="rfid" checked="checked" type="checkbox"
+                    <li><label><input value="rfid" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>RFID卡号</label></li>
-                    <li><label><input value="userRfid" checked="checked" type="checkbox"
+                    <li><label><input value="userRfid" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>用户RFID</label></li>
                     <li><label><input value="obdMiles" checked="checked" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>累计里程</label></li>
-                    <li><label><input value="engineTempe" checked="checked" type="checkbox"
+                    <li><label><input value="engineTempe" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>发动机温度</label></li>
                     <li><label><input value="totalMiles" checked="checked" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>订单总里程</label></li>
@@ -59,13 +59,13 @@
                                       onclick='showHideColumn(this, this.value);'>SOC</label></li>
                     <li><label><input value="chargingStatusText" checked="checked" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>充电状态</label></li>
-                    <li><label><input value="fuelMiles" checked="checked" type="checkbox"
+                    <li><label><input value="fuelMiles" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>订单油里程</label></li>
-                    <li><label><input value="elecMiles" checked="checked" type="checkbox"
+                    <li><label><input value="elecMiles" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>订单电量程</label></li>
                     <li><label><input value="endurMiles" checked="checked" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>续航里程</label></li>
-                    <li><label><input value="tempe" checked="checked" type="checkbox"
+                    <li><label><input value="tempe"  type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>温度</label></li>
                     <li><label><input value="gpsNum" checked="checked" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>卫星数量</label></li>
@@ -81,13 +81,13 @@
                                       onclick='showHideColumn(this, this.value);'>纬度</label></li>
                     <li><label><input value="directionAngle" checked="checked" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>方向角</label></li>
-                    <li><label><input value="circularModeText" checked="checked" type="checkbox"
+                    <li><label><input value="circularModeText"  type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>循环模式</label></li>
-                    <li><label><input value="ptcStatusText" checked="checked" type="checkbox"
+                    <li><label><input value="ptcStatusText"   type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>PTC启停</label></li>
-                    <li><label><input value="compreStatusText" checked="checked" type="checkbox"
+                    <li><label><input value="compreStatusText"  type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>压缩机</label></li>
-                    <li><label><input value="fanModeText" checked="checked" type="checkbox"
+                    <li><label><input value="fanModeText" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>档风量</label></li>
                     <li><label><input value="savingModeText" checked="checked" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>功耗模式</label></li>
@@ -116,7 +116,7 @@
                                       onclick='showHideColumn(this, this.value);'>车架号</label></li>
                     <li><label><input value="teNo" checked="checked" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>序列号</label></li>
-                    <li><label><input value="iccid" checked="checked" type="checkbox"
+                    <li><label><input value="iccid" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>ICCID</label></li>
                     <li><label><input value="mobile" checked="checked" type="checkbox"
                                       onclick='showHideColumn(this, this.value);'>手机号</label></li>
@@ -298,59 +298,41 @@
 
     var tableId = "THistoryState";
     var clms = [{checkbox: true}
-
-        , {field: "csAccessText", title: "接入商", width: 140}
-        , {field: "csNumber", title: "车机号", width: 140}
-
-        , {field: "vin", title: "车架号", width: 140}
-        , {field: "teNo", title: "序列号", width: 140}
-        , {field: "mobile", title: "手机号", width: 140}
-        , {field: "iccid", title: "ICCID", width: 140}
-        , {field: "sourceHex", title: "原始报文", width: 140}
-
+        , {field: "csAccessText", title: "接入商", width: 100}
+        , {field: "csNumber", title: "车机号", width: 100}
+        , {field: "vin", title: "车架号", width: 180}
+        , {field: "teNo", title: "序列号", width: 100}
+        , {field: "mobile", title: "手机号", width: 120}
         , {field: "addTimeText", title: "接收时间", width: 160}
         , {field: "currentTimeText", title: "报文时间", width: 160}
-        , {field: "rentFlg", title: "租赁状态", width: 110}
-        , {field: "warnCode", title: "报警码", width: 110}
-        , {field: "rfid", title: "RFID卡号", width: 110}
-        , {field: "userRfid", title: "用户RFID", width: 110}
-        , {field: "obdMiles", title: "累计里程", width: 110}
-        , {field: "engineTempe", title: "发动机温度", width: 110}
+        , {field: "obdMiles", title: "累计里程", width: 100}
+        , {field: "powerReserve", title: "小电池电量", width: 100}
+        , {field: "netStrength", title: "CSQ", width: 80}
+        , {field: "evBattery", title: "SOC", width: 80}
+        , {field: "chargingStatusText", title: "充电状态", width: 80}
+        , {field: "endurMiles", title: "续航里程", width: 80}
+        , {field: "gpsValidText", title: "gps有效性", width: 90}
+        , {field: "longitude", title: "经度", width: 120}
+        , {field: "latitude", title: "纬度", width: 120}
         , {field: "totalMiles", title: "订单总里程", width: 110}
-        , {field: "speed", title: "车速", width: 110}
-        , {field: "motorSpeed", title: "转速", width: 110}
-        , {field: "oilCost", title: "燃油量", width: 110}
-        , {field: "powerReserve", title: "小电池电量", width: 110}
-        , {field: "evBattery", title: "SOC", width: 110}
-        , {field: "chargingStatusText", title: "充电状态", width: 110}
-        , {field: "fuelMiles", title: "订单油里程", width: 110}
-        , {field: "elecMiles", title: "订单电量程", width: 110}
-        , {field: "endurMiles", title: "续航里程", width: 110}
-        , {field: "tempe", title: "温度", width: 110}
-        , {field: "netStrength", title: "CSQ", width: 110}
-        , {field: "longitude", title: "经度", width: 160}
-        , {field: "latitude", title: "纬度", width: 160}
-        , {field: "gpsValidText", title: "gps有效性", width: 110}
+        , {field: "speed", title: "车速", width: 80}
+        , {field: "motorSpeed", title: "转速", width: 80}
+        , {field: "oilCost", title: "燃油量", width: 80}
         , {field: "gpsStrength", title: "卫星信号强度", width: 110}
-        , {field: "gpsNum", title: "卫星数量", width: 110}
-        , {field: "directionAngle", title: "方向角", width: 110}
-        , {field: "circularModeText", title: "循环模式", width: 110}
-        , {field: "ptcStatusText", title: "PTC启停", width: 110}
-        , {field: "compreStatusText", title: "压缩机状态", width: 110}
-        , {field: "fanModeText", title: "档风量", width: 110}
-        , {field: "savingModeText", title: "功耗模式", width: 110}
-        , {field: "doorStatus", title: "车门状态", width: 110}
-        , {field: "engineStatusText", title: "发动机状态", width: 110}
-        , {field: "keyStatus", title: "钥匙状态", width: 110}
-        , {field: "gearText", title: "档位", width: 110}
-        , {field: "lightStatus", title: "车灯状态", width: 110}
-        , {field: "lockStatus", title: "车锁状态", width: 110}
-        , {field: "netTypeText", title: "网络类型", width: 110}
-        , {field: "baseLac", title: "LAC", width: 110}
-        , {field: "baseCi", title: "CI", width: 110}
+        , {field: "gpsNum", title: "卫星数量", width: 90}
+        , {field: "directionAngle", title: "方向角", width: 90}
+        , {field: "savingModeText", title: "功耗模式", width: 90}
+        , {field: "doorStatus", title: "车门状态", width: 100}
+        , {field: "engineStatusText", title: "发动机状态", width: 90}
+        , {field: "keyStatus", title: "钥匙状态", width: 90}
+        , {field: "gearText", title: "档位", width: 80}
+        , {field: "lightStatus", title: "车灯状态", width: 100}
+        , {field: "lockStatus", title: "车锁状态", width: 80}
+        , {field: "netTypeText", title: "网络类型", width: 80}
+        , {field: "baseLac", title: "LAC", width: 80}
+        , {field: "baseCi", title: "CI", width: 100}
         , {field: "curOrder", title: "订单号", width: 110}
-
-
+        , {field: "sourceHex", title: "原始报文", width: 240}
     ];
 
     var option = {
@@ -358,7 +340,7 @@
         elem: "#table",
         page: true,
         limits: [10, 15, 20, 30, 50, 100],
-        limit: 15,
+        limit: 100,
         height: getTableHeight(),
         url: getServUrl("/monitor/historyState/list"),
         cols: [clms],
